--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{"homepage": "https://github.com/RiniJ7/react-styles-css",
-  "name": "react-styles-css",
+{"homepage": "https://github.com/RiniJ7/Nasa-facts-cards-with-react-css-modules",
+  "name": "Nasa-facts-cards-with-react-css-modules",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
